2001-04-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/Makefile: New file.

2001-04-16  Ulrich Drepper  <drepper@redhat.com>

	* signals.c (sigwait): NSIG is no signal number.  Block all
	signals while in signal handler for signals in SET.
	Patch by Manfred Spraul <manfred@colorfullife.com>.

2001-04-12  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel.c: Disable most tests.  Add new test where all
	cleanup handlers must run.
	* Makefile (tests): Add tst-cancel again.

	* cancel.c (__pthread_perform_cleanup): Correct condition for
	leaving cleanup loop early.

	* sysdeps/i386/Makefile: Make sure gcc uses a frame pointer for
	all the files which use CURRENT_STACK_FRAME.
	* sysdeps/i386/pt-machine.h (CURRENT_STACK_FRAME): Define using
	__builtin_frame_address.
	* sysdeps/i386/i686/pt-machine.h: Likewise.

2001-04-11  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Comment out tst-cancel for now.

	* tst-cancel.c (main): Cleanup 4 is supposed to run.  Create
	temporary file in object directory.
	* Makefile: Don't allow inlining when compiling tst-cancel.c.
	Pass $(objpfx) to tst-cancel.

2001-04-11  David S. Miller  <davem@redhat.com>

	* sysdeps/sparc/sparc32/pt-machine.h (stack_pointer): Advance
	up closer to user local variables so that new cleanup heuristics work.
	* sysdeps/sparc/sparc64/pt-machine.h (stack_pointer): Likewise.

2001-04-11  Ulrich Drepper  <drepper@redhat.com>

	* cancel.c (_pthread_cleanup_push): Catch invalid __prev buffer
	and remove it.
	(_pthread_cleanup_push_defer): Likewise.

	* tst-cancel.c (main): Fix loop printing cleanup output.

2001-04-10  kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/pspinlock.c (__pthread_spin_lock): Fix a reverse
	test.
	(__pthread_spin_trylock): Likewise.
	* sysdeps/sh/pt-machine.h (testandset): Likewise.

2001-04-10  Ulrich Drepper  <drepper@redhat.com>

	* join.c (pthread_exit): Move code to new function __pthread_do_exit